           by users, but often needed internally. The function and its
           functionally is still available under its new name but a lot
           of integrity checks had been removed from the code, which
           doubles the speed when transforming objects, but makes the
           function failing fast.

  Bugfixes and changes:

         • ‘apply_CosmicRayRemoval()’

             • Argument ‘silent’ renamed to ‘verbose’,

             • new argument ‘method.Pych.threshold_factor’ added to
               have a better control for the threshold value used for
               the removal,

             • new argument ‘MARGIN’ added to allow the application of
               the methods along the wavelength or the time.

         • ‘calc_FadingCorr()’

             • Table column headers now have all capital letters,

             • minor performance improvements.

         • ‘calc_OSLLxTxRatio()’

             • New argument ‘digits’ introduced to allow direct
               rounding of the numbers,

             • add argument ‘sig0’ to allow for an extra component of
               error.

         • ‘plot_RLum.Analysis()’

             • All ‘...’ arguments can now be provided as ‘vector’ or
               ‘list’ to gain more control of the plot appearance,

             • argument ‘abline’ now works also in combination with
               ‘combine = TRUE’ and allows to set ablines independently
               over different plots (#260),

             • automatic axes labelling improved for ‘combine = TRUE’,

             • support further ‘...’ argument ‘legend’ (TRUE/FALSE).

         • ‘plot_GrowthCurve()’

             • If the input data contain a least one infinite value the
               function will not crash any longer, but return ‘NULL’.

         • ‘merge_RLum.Data.Curve()’

             • Support further merge operations: ‘median’, ‘var’, ‘sd’,
               ‘min’, ‘max’.

         • ‘Risoe.BINfileData2RLum.Analysis()’
