@@ -101,9 +101,9 @@
 </td>
 <td class=cellinside>0.7.1
 </td>
-<td class=cellinside>2016-01-24
+<td class=cellinside>2016-01-26
 </td>
-<td class=cellinside>13:16:47
+<td class=cellinside>09:56:02
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -460,9 +460,9 @@
 </td>
 <td class=cellinside>0.6.1
 </td>
-<td class=cellinside>2016-01-25
+<td class=cellinside>2016-01-26
 </td>
-<td class=cellinside>21:24:43
+<td class=cellinside>09:17:35
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1076,9 +1076,9 @@
 </td>
 <td class=cellinside>0.1.7
 </td>
-<td class=cellinside>2016-01-25
+<td class=cellinside>2016-01-26
 </td>
-<td class=cellinside>19:39:13
+<td class=cellinside>09:17:35
 
 </td>
 <td class=cellinside><br /> Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,<br /> IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot<br /> introduced by Galbraith & Green (1990)<br />  R Luminescence Package Team
@@ -1133,9 +1133,9 @@
 </td>
 <td class=cellinside>1.8.4
 </td>
-<td class=cellinside>2016-01-25
+<td class=cellinside>2016-01-26
 </td>
-<td class=cellinside>21:01:05
+<td class=cellinside>09:17:35
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -1493,9 +1493,9 @@
 </td>
 <td class=cellinside>0.3.0
 </td>
-<td class=cellinside>2016-01-25
+<td class=cellinside>2016-01-26
 </td>
-<td class=cellinside>19:19:29
+<td class=cellinside>09:17:35
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
