@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.3 by xtable 1.8-0 package
-% Mon Jan 25 21:27:07 2016
+% Tue Jan 26 10:03:14 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -10,7 +10,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   2 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.2.0 & 2016-01-18 & 15:07:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.7.1 & 2016-01-24 & 13:16:47
+  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.7.1 & 2016-01-26 & 09:56:02
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   4 & Analyse\_SAR.OSLdata & Analyse SAR CW-OSL measurements. & $<$br /$>$ The function analyses SAR CW-OSL curve data and provides a summary of the$<$br /$>$ measured data for every position. The output of the function is optimised$<$br /$>$ for SAR OSL measurements on quartz.$<$br /$>$ & 0.2.17 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, HZDR, Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -46,7 +46,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)   Based on a$<$br /$>$ rewritten S script of Rex Galbraith, 2010  $<$br /$>$  R Luminescence Package Team \\ 
   21 & calc\_MinDose & Apply the (un-)logged minimum age model (MAM) after Galbraith et al. (1999)$<$br /$>$ to a given De distribution & $<$br /$>$ Function to fit the (un-)logged three or four parameter minimum dose model$<$br /$>$ (MAM-3/4) to De data.$<$br /$>$ & 0.4.1 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)   Based on a$<$br /$>$ rewritten S script of Rex Galbraith, 2010   The bootstrap approach is$<$br /$>$ based on a rewritten MATLAB script of Alastair Cunningham.   Alastair$<$br /$>$ Cunningham is thanked for his help in implementing and cross-checking the$<$br /$>$ code.$<$br /$>$  R Luminescence Package Team \\ 
-  22 & calc\_OSLLxTxRatio & Calculate Lx/Tx ratio for CW-OSL curves & $<$br /$>$ Calculate Lx/Tx ratios from a given set of CW-OSL curves assuming late light background subtraction.$<$br /$>$ & 0.6.1 & 2016-01-25 & 21:24:43
+  22 & calc\_OSLLxTxRatio & Calculate Lx/Tx ratio for CW-OSL curves & $<$br /$>$ Calculate Lx/Tx ratios from a given set of CW-OSL curves assuming late light background subtraction.$<$br /$>$ & 0.6.1 & 2016-01-26 & 09:17:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   23 & calc\_SourceDoseRate & Calculation of the source dose rate via the date of measurement & $<$br /$>$ Calculating the dose rate of the irradiation source via the date of$<$br /$>$ measurement based on: source calibration date, source dose rate, dose rate$<$br /$>$ error. The function returns a data.frame that provides the input argument$<$br /$>$ dose\_rate for the function  Second2Gray .$<$br /$>$ & 0.3.0 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Margret C. Fuchs, HZDR, Helmholtz-Institute Freiberg for Resource Technology (Germany),$<$br /$>$  Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -101,13 +101,13 @@
   53 & methods\_RLum & methods\_RLum & $<$br /$>$ Methods for S3-generics implemented for the package 'Luminescence'.$<$br /$>$ This document summarises all implemented S3-generics. The name of the function$<$br /$>$ is given before the first dot, after the dot the name of the object that is supported by this method$<$br /$>$ is given, e.g.  plot.RLum.Data.Curve  can be called by  plot(object, ...) , where$<$br /$>$ object  is the  RLum.Data.Curve  object.$<$br /$>$ &  &  &  &  \\ 
   54 & names\_RLum & S4-names function for RLum S4 class objects & $<$br /$>$ Function calls object-specific names functions for RLum S4 class objects.$<$br /$>$ & 0.1.0 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  55 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.7 & 2016-01-25 & 19:39:13
+  55 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.7 & 2016-01-26 & 09:17:35
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
   56 & plot\_DetPlot & Create De(t) plot & $<$br /$>$ Plots the equivalent dose (De) in dependency of the chosen signal integral (cf. Bailey et al., 2003).$<$br /$>$ The function is simply passing several arguments to the function  plot  and the used$<$br /$>$ analysis functions and runs it in a loop. Example:  legend.pos  for legend position,$<$br /$>$ legend  for legend text.$<$br /$>$ & 0.1.0 & 2016-01-18 & 15:07:03
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   57 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  58 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.4 & 2016-01-25 & 21:01:05
+  58 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.4 & 2016-01-26 & 09:17:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   59 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2016-01-19 & 20:14:49
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -144,7 +144,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   76 & Risoe.BINfileData-class & Class  "Risoe.BINfileData" & $<$br /$>$ S4 class object for luminescence data in R. The object is produced as output$<$br /$>$ of the function  read\_BIN2R .$<$br /$>$ & 0.2.0
  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  77 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.3.0 & 2016-01-25 & 19:19:29
+  77 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.3.0 & 2016-01-26 & 09:17:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   78 & RLum-class & Class  "RLum" & $<$br /$>$ Abstract class for data in the package Luminescence$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   79 & RLum.Analysis-class & Class  "RLum.Analysis" & $<$br /$>$ Object class to represent analysis data for protocol analysis, i.e. all curves, spectra etc.$<$br /$>$ from one measurements. Objects from this class are produced, by e.g.  read\_XSYG2R ,$<$br /$>$ read\_Daybreak2R $<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
