@@ -40,6 +40,16 @@
    \itemize{
 
 
+      \item \code{analyse_SAR.CWOSL()}
+      \itemize{
+
+        \item The function now checks more strict for allowed record types ('OSL' or 'IRSL'). At
+        the same time the function will not stop with an error if no such record type is detected,
+        but return \code{NULL} and print a warning. This was necessary to prevent a misuse of
+        the function, which may end up in undesiered (wrong) results.
+
+      }
+
       \item \code{apply_CosmicRayRemoval()}
       \itemize{
 
